# ext4magic

./: AUTHORS  ChangeLog  INSTALL  INSTALL.de  Makefile.am  Makefile.in  NEWS  README  TODO  config.guess  config.sub  configure  configure.ac  configure.in  depcomp  ltmain.sh
src/: Makefile.am  Makefile.in  block.c  block.h  dir_list.c  dir_list.h  ext2fsP.h  ext4magic.8  ext4magic.c  ext4magic.h  extent_db.c  extent_db.h  file_type.c  hard_link_stack.c  hard_link_stack.h  imap_search.c  inode.c  inode.h  jfs_compat.h  journal.c  journal.h  kernel-jbd.h  lookup_local.c  magic.h  magic_block_scan.c  recover.c  ring_buf.c  ring_buf.h  util.c  util.h
