AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(ext4magic, 0.1.3)

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL
AC_ARG_ENABLE(debug,[  --enable-debug            Turn on debugging ],
         [if test "$GCC" = "yes"; then CPPFLAGS="$CPPFLAGS -DDEBUG"; fi])
AC_ARG_ENABLE(file-attr,[  --enable-file-attr            enable restore of file attribute ],
         [if test "$GCC" = "yes"; then CPPFLAGS="$CPPFLAGS -DFILE_ATTR"; fi])

AC_OUTPUT(Makefile src/Makefile)
